--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>HTML Academy: Погнали</title>
   </head>
-  <body>
+  <body class="page">
+  <header class="page-header">
 
-  
-
+  </header>
   </body>
 </html>
