--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,8 @@
   <header class="page-header">
     <nav class="page-header__nav main-nav">
       <div class="main-nav__inner">
-        <a class="main-nav__logo logo"></a>>
+        <a class="main-nav__logo logo"></a>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>>
 
     </nav>>
